--- a/NAOserver/MainWindow.xaml
+++ b/NAOserver/MainWindow.xaml
@@ -1,14 +1,19 @@
 ﻿<Window x:Class="NAOserver.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="NAO Control via Websockets" Height="202.409" Width="420" ResizeMode="CanMinimize" Closing="Window_Closing" StateChanged="OnStateChanged" Icon="logo_NAO.ico">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="5*"/>
-        </Grid.ColumnDefinitions>
-        <Button x:Name="connectButton" Content="Start" HorizontalAlignment="Left" Margin="43,49,0,0" VerticalAlignment="Top" Width="139" Height="70" Click="connectButton_Click" IsEnabled="False" Grid.ColumnSpan="2"/>
-        <Button x:Name="disconnectButton" Content="Stop" HorizontalAlignment="Left" Margin="158,49,0,0" VerticalAlignment="Top" Width="139" Height="70" Click="disconnectButton_Click" Grid.Column="1"/>
+        Title="NAO Control for PetFeeder " Height="271.284" Width="420" ResizeMode="CanMinimize" Closing="Window_Closing" StateChanged="OnStateChanged" Icon="logo_NAO.ico">
+    <Grid Height="234" VerticalAlignment="Top">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="186*"/>
+            <RowDefinition Height="55*"/>
+        </Grid.RowDefinitions>
+        <Button x:Name="connectButton" Content="Start" HorizontalAlignment="Left" Margin="43,86,0,0" VerticalAlignment="Top" Width="139" Height="70" Click="connectButton_Click" IsEnabled="False"/>
+        <Button x:Name="disconnectButton" Content="Stop" HorizontalAlignment="Left" Margin="218,86,0,0" VerticalAlignment="Top" Width="139" Height="70" Click="disconnectButton_Click"/>
+        <TextBox x:Name="ipBox" HorizontalAlignment="Left" Height="18" Margin="262,47,0,0" TextWrapping="Wrap" Text="192.168.0.102" VerticalAlignment="Top" Width="95" MaxLines="1" MaxLength="15" TextAlignment="Center"/>
+        <TextBox x:Name="portBox" HorizontalAlignment="Left" Height="18" Margin="307,15,0,0" TextWrapping="Wrap" Text="443" VerticalAlignment="Top" Width="50" MaxLength="4" MaxLines="1" RenderTransformOrigin="1.25,0.391" TextAlignment="Center"/>
+        <Label x:Name="portLabel" Content="WebSocket Port:" HorizontalAlignment="Left" Height="27" Margin="43,15,0,0" VerticalAlignment="Top" Width="97"/>
+        <Label Content="NAO IP:" HorizontalAlignment="Left" Margin="43,47,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="logBox" HorizontalAlignment="Left" Margin="43,172,0,0" TextWrapping="Wrap" Width="314" Text="..." RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2" Height="43" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
